--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,7 +25,7 @@ jobs:
         if test -n "$(git status --porcelain)"; then
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add OpenRCT2.asl cache.ron
+          git add OpenRCT2.asl OpenRCT2_header.asl cache.ron
           git commit -m 'chore: update autosplitter script'
         fi
     - name: Push
